Fix horizontal extra space bug

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -19,6 +19,11 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 h1,
